# mathstuff

./: Cargo.toml  LICENSE  README.md  RustTestNotebook.ipynb  shell.nix  test.txt
mathstuff-polynomials/: Cargo.toml
mathstuff-polynomials/src/: factorization.rs  lib.rs  modular_arith.rs  tests.rs
mathstuff-types/: Cargo.toml
mathstuff-types/src/: lib.rs  print.rs  traits.rs
mathstuff-typst/: Cargo.toml
mathstuff-typst-render-test/: Cargo.toml
mathstuff-typst-render-test/src/: main.rs
mathstuff-typst/src/: lib.rs
src/: cmp.rs  constant.rs  helpers.rs  lib.rs  main.rs  polynomials.rs  rational_expressions.rs  tests.rs  typst_display.rs
src/diff/: mod.rs
src/parse/: mod.rs  tests.rs
src/print/: mod.rs
src/simplify/: mod.rs  ops.rs
src/tests/: derivative.rs  parse.rs  variables.rs
