[workspace]
members = ["mathstuff-typst", "mathstuff-typst-render-test"]

[workspace.package]
edition = "2021"

[workspace.dependencies]
bytemuck = "1.14.0"

[package]
name = "mathstuff"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
chumsky = "0.9.2"
fxhash = "0.2.1"
num = "0.4.0"
smallvec = "1.10.0"
tracing = "0.1.37"


[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.2.3"

[features]
# default = ["typst_display"]
# typst_display = ["typst", "typst-library", "base64"]
