[package]
name = "mathstuff-typst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typst = { git = "https://github.com/typst/typst" }
typst-library = { git = "https://github.com/typst/typst" }
comemo = "0.3.0"
image = "0.24.7"
base64 = "0.21.4"
palette = "0.7.3"
bytemuck.workspace = true
